--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
         "crossorigin",
-        "performant"
-    ]
+        "performant",
+        "resetbtn",
+        "startbtn"
+    ],
+    "liveServer.settings.port": 5501
 }
